--- a/src/views/partials/navigation.html
+++ b/src/views/partials/navigation.html
@@ -1,31 +1,97 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<!-- ... -->
+<div class="direccion">
     <div class="container">
-        <a class="navbar-brand" href="/">FOGA web</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <p class="m-0 text-dark"
+            style="font-size: 0.7em;">
+            Circuito Los Heroes 355, Urb. Pio pata - El Tambo
+        </p>
+    </div>
+</div>
+
+<!-- NAVBAR -->
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light headerBackground sticky-top">
+    <div class="container-fluid">
+
+        <div class="pl-5 col-4">
+            <a href="/"><img src="/img/logoFoga.png"
+                    class="logoFoga"
+                    alt="Website Logo" /></a>
+        </div>
+
+        <button class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav ml-auto">
+
+        <div class="collapse navbar-collapse"
+            id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/"> <i class="fa fa-home"></i> Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/#about"><i class="fa fa-building"></i> Nosotros</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/contact"><i class="fa fa-envelope"></i> Contacto</a>
+                    <a class="nav-link"
+                        href="/">Inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="/servicios" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle"
+                        href="#"
+                        id="navbarDropdown"
+                        role="button"
+                        data-toggle="dropdown"
+                        aria-haspopup="true"
+                        aria-expanded="false">
                         Servicios
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                    <div class="dropdown-menu"
+                        aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item"
+                            href="/telecomunicaciones">Telecomunicaciones</a>
+                        <a class="dropdown-item"
+                            href="/catering">Catering</a>
+                        <a class="dropdown-item"
+                            href="/licitaciones">Licitaciones</a>
+                        <a class="dropdown-item"
+                            href="/confeccion">Confección Textil</a>
+                        <a class="dropdown-item"
+                            href="/distribucion">Distribucion de Productos</a>
                     </div>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link"
+                        href="#">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link"
+                        href="#">Galeria</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link"
+                        href="/contact">Contacto</a>
+                </li>
             </ul>
+
+            <div class="col-4 d-none d-md-block d-lg-block d-xl-block">
+                <a class="social-media"
+                    target="_blank"
+                    href="https://www.facebook.com/Servicios-Generales-FOGA-102479198608177"><i class="fab fa-facebook mx-2 fa-2x"
+                        style="color:  #3C5A99"></i></a>
+                <a class="social-media"
+                    target="_blank"
+                    href="https://www.youtube.com"><i class="fab fa-youtube mx-2 fa-2x"
+                        style="color:  #cc181e"></i></a>
+                <a class="social-media"
+                    target="_blank"
+                    href="https://www.twitter.com"><i class="fab fa-twitter mx-2 fa-2x"
+                        style="color:  #38A1F3"></i></a>
+                <a class="social-media"
+                    target="_blank"
+                    href="https://www.instagram.com"><i class="fab fa-instagram mx-2 fa-2x"
+                        style="color:  #3C5A99"></i></a>
+            </div>
         </div>
     </div>
 </nav>
