--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,39 +3,458 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible"
+    content="IE=edge" />
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0" />
   <title>First node page</title>
-  <%- include ('partials/head.html') %>
+  <%- include
+    ('partials/head.html')
+    %>
 
 </head>
 
 <body>
-  <%- include ('partials/navigation.html') %>
-    <div class="container">
+  <!-- HEADER -->
+  <%- include
+    ('partials/navigation.html')
+    %>
+
+    <!-- SHOWCASE SLIDER -->
+    <section id="showcase">
+      <div id="myCarousel"
+        class="carousel slide"
+        data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel"
+            data-slide-to="0"
+            class="active"></li>
+          <li data-target="#myCarousel"
+            data-slide-to="1"></li>
+          <li data-target="#myCarousel"
+            data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item carousel-image-1 active">
+            <div class="container">
+              <div class="carousel-caption d-none d-sm-block text-right mb-5">
+                <h1 class="display-3 carousel-text">Servicios Generales</h1>
+                <p class="lead carousel-text">
+                  Inversiones FOGA E.I.R.L
+                </p>
+                <a href="/7_maravillas"
+                  class="btn btn-mod btn-border btn-large carousel-text">Más...</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="carousel-item carousel-image-2">
+            <div class="container">
+              <div class="carousel-caption d-none d-sm-block mb-5">
+                <h1 class="display-3 carousel-text">Servicio de Calidad</h1>
+                <p class="lead carousel-text">
+                  La excelencia de nuestros servicios es nuestra mejor carta de presentación
+                </p>
+                <a href="/historia_accoyanca"
+                  class="btn btn-mod btn-border btn-large carousel-text">Más...</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="carousel-item carousel-image-3">
+            <div class="container">
+              <div class="carousel-caption d-none d-sm-block text-right mb-5">
+                <h1 class="display-3 carousel-text">Profesionales capacitados y con experiencia</h1>
+                <p class="lead carousel-text">
+                  Contamos con personal idóneo, responsable y comprometido que se encargará de ejecutar los trabajos en cada especialidad.
+                </p>
+                <a href="#nosotros"
+                  class="btn btn-mod btn-border btn-large carousel-text">Más...</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <a href="#myCarousel"
+          data-slide="prev"
+          class="carousel-control-prev">
+          <span class="carousel-control-prev-icon"></span>
+        </a>
+
+        <a href="#myCarousel"
+          data-slide="next"
+          class="carousel-control-next">
+          <span class="carousel-control-next-icon"></span>
+        </a>
+      </div>
+    </section>
+
+
+    <!-- <div class="container">
       <header class="row">
         <div class="col-lg-12 text-center">
           <img src="/img/pews-logo.png" class="animate__animated animate__bounceIn" alt="Pews Logo">
         </div>
       </header>
-    </div>
+    </div> -->
 
-    <!-- section one -->
-    <div class="container-fluid" id='about'>
-      <div class="row bg-dark text-white p-5 text-center">
-        <div class="col-sm-6">
-          <i class="fab fa-youtube fa-10x"></i>
-        </div>
-        <div class="col-sm-6">
-          <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, laborum!</h3>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore doloribus veniam ut. Non eum sit suscipit saepe pariatur doloribus optio ipsum quam eaque quibusdam quas aspernatur repellat, labore amet reprehenderit!
-          </p>
+
+
+    <!-- Topic Cards -->
+    <div id="cards_landscape_wrap-2">
+      <h1 class="display-4 text-center pt-5">Nuestros Servicios</h1>
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <a href="/telecomunicaciones">
+              <div class="card-flyer">
+                <div class="text-box">
+                  <div class="image-box">
+                    <img src="/img/telecomunicaciones.jpg"
+                      alt="" />
+                  </div>
+                  <div class="text-container">
+                    <h6>Telecomunicaciones</h6>
+                    <p>Nuestro Equipo está integrado por expertos en las Tecnologías más actualizadas del mercado, capaces de entender sus necesidades y...</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <a href="/catering">
+              <div class="card-flyer">
+                <div class="text-box">
+                  <div class="image-box">
+                    <img src="/img/catering.jpg"
+                      alt="" />
+                  </div>
+                  <div class="text-container">
+                    <h6>Servicios de Catering</h6>
+                    <p>Selecto equipo de profesionales con amplia experiencia en el servicio de alimentos, que actualmente vienen desempeñándose en los...</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <a href="confeccion">
+              <div class="card-flyer">
+                <div class="text-box">
+                  <div class="image-box">
+                    <img src="/img/confeccion.jpg"
+                      alt="" />
+                  </div>
+
+                  <div class="text-container">
+                    <h6>Confección Textil</h6>
+                    <p>Experiencia dedicada a la Fabricación y Venta de Ropa Industrial y Uniformes. Contamos con profesionales especializados y en constan...</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <a href="licitaciones">
+              <div class="card-flyer">
+                <div class="text-box">
+                  <div class="image-box">
+                    <img src="/img/licitacion.jpg"
+                      alt="" />
+                  </div>
+                  <div class="text-container">
+                    <h6>Licitaciones en General</h6>
+                    <p>Somos especialistas en el rubro de las licitaciones , con experiencia y calidad en el cumplimiento de los requerimien...</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <a href="distribucion">
+              <div class="card-flyer">
+                <div class="text-box">
+                  <div class="image-box">
+                    <img src="/img/distribucion.jpg"
+                      alt="" />
+                  </div>
+                  <div class="text-container">
+                    <h6>Distribución de Productos</h6>
+                    <p>Estamos especializados en operación logística para clientes exigentes y para todos aquellos dispuestos a solu...</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
         </div>
       </div>
     </div>
 
+    <!-- ABOUT US -->
+
+    <div id="nosotros"
+      class="about-section">
+      <div class="inner-container">
+        <h1 class="display-4 text-left pt-5">¿Quiénes Somos?</h1>
+        <p class="text text-white">Inversiones FOGA E.I.R.L., es una empresa emergente que pone a su disposición una amplia variedad de servicios generales y profesionales. Contamos con personal técnico especializado y altamente capacitado que destaca por sus cualidades tanto personales como profesionales para afrontar los retos presentes y futuros.
+        </p>
+        <div class="skills">
+          <span class="text-white"> Experiencia</span>
+          <span class="text-white"> Calidad</span>
+          <span class="text-white"> Confianza</span>
+
+        </div>
+      </div>
+    </div>
+
+    <!-- PHOTO GALLERY -->
+    <section id="gallery"
+      class="py-4 bg-light">
+      <div class="container">
+        <h1 class="display-4 text-center py-3">Galería</h1>
+
+        <div class="row mb-4">
+          <div class="col-md-4">
+            <a href="/img/galeria1.jpg"
+              data-toggle="lightbox"
+              data-gallery="img-gallery"
+              data-height="560"
+              data-width="560">
+              <img src="/img/galeria1.jpg"
+                alt=""
+                class="img-fluid" />
+            </a>
+          </div>
+
+          <div class="col-md-4">
+            <a href="/img/galeria2.jpg"
+              data-toggle="lightbox"
+              data-gallery="img-gallery"
+              data-height="561"
+              data-width="561">
+              <img src="/img/galeria2.jpg"
+                alt=""
+                class="img-fluid" />
+            </a>
+          </div>
+
+          <div class="col-md-4">
+            <a href="/img/galeria3.jpg"
+              data-toggle="lightbox"
+              data-gallery="img-gallery"
+              data-height="562"
+              data-width="562">
+              <img src="/img/galeria3.jpg"
+                alt=""
+                class="img-fluid" />
+            </a>
+          </div>
+        </div>
+
+        <div class="row mb-4">
+          <div class="col-md-4">
+            <a href="/img/galeria4.jpg"
+              data-toggle="lightbox"
+              data-gallery="img-gallery"
+              data-height="563"
+              data-width="563">
+              <img src="/img/galeria4.jpg"
+                alt=""
+                class="img-fluid" />
+            </a>
+          </div>
+
+          <div class="col-md-4">
+            <a href="/img/galeria5.jpg"
+              data-toggle="lightbox"
+              data-gallery="img-gallery"
+              data-height="564"
+              data-width="564">
+              <img src="/img/galeria5.jpg"
+                alt=""
+                class="img-fluid" />
+            </a>
+          </div>
+
+          <div class="col-md-4">
+            <a href="/img/galeria6.jpg"
+              data-toggle="lightbox"
+              data-gallery="img-gallery"
+              data-height="565"
+              data-width="565">
+              <img src="/img/galeria6.jpg"
+                alt=""
+                class="img-fluid" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- CONTACT INFORMATION -->
+
+    <div class="container">
+
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
+          <h1 class="display-4 text-center py-3">Contáctanos</h1>
+        </div>
+      </div>
+
+      <div class="row">
+
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+
+          <form id="contact-form"
+            name="myForm"
+            class="form"
+            action="#"
+            onsubmit="return validateForm()"
+            method="POST"
+            role="form">
+
+            <div class="form-group">
+              <label class="form-label"
+                id="nameLabel"
+                for="name"></label>
+              <input type="text"
+                class="form-control"
+                id="name"
+                name="name"
+                placeholder="NOMBRE"
+                tabindex="1">
+            </div>
+
+            <div class="form-group">
+              <label class="form-label"
+                id="emailLabel"
+                for="email"></label>
+              <input type="email"
+                class="form-control"
+                id="email"
+                name="email"
+                placeholder="Email"
+                tabindex="2">
+            </div>
+
+            <div class="form-group">
+              <label class="form-label"
+                id="subjectLabel"
+                for="sublect"></label>
+              <input type="text"
+                class="form-control"
+                id="subject"
+                name="subject"
+                placeholder="Asunto"
+                tabindex="3">
+            </div>
+
+            <div class="form-group">
+              <label class="form-label"
+                id="messageLabel"
+                for="message"></label>
+              <textarea rows="6"
+                cols="60"
+                name="message"
+                class="form-control"
+                id="message"
+                placeholder="Mensaje"
+                tabindex="4"></textarea>
+            </div>
+
+            <div class="text-center my-3">
+              <button type="submit"
+                class="btn btn-mod btn-border btn-large">Enviar mensaje</button>
+            </div>
+
+          </form><!-- End form -->
+
+        </div><!-- End col -->
+
+      </div><!-- End row -->
+
+    </div><!-- End container -->
+
+
+    <!-- FOOTER -->
+
+
+    <%- include
+      ('partials/footer.html')
+      %>
+
+      <script>
+        function validateForm() {
+          var n = document.getElementById('name').value;
+          var e = document.getElementById('email').value;
+          var s = document.getElementById('subject').value;
+          var m = document.getElementById('message').value;
+          var onlyLetters = /^[a-zA-Z\s]*$/;
+          var onlyEmail = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+
+
+          if (n == "" || n == null) {
+            document.getElementById('nameLabel').innerHTML = ('Ingresa tu nombre por favor');
+            document.getElementById('name').style.borderColor = "red";
+            return false;
+          }
+
+
+          if (!n.match(onlyLetters)) {
+            document.getElementById('nameLabel').innerHTML = ('Ingresa solo letras por favor');
+            document.getElementById('name').style.borderColor = "red";
+            return false;
+          }
+
+          if (e == "" || e == null) {
+            document.getElementById('emailLabel').innerHTML = ('Ingresa tu email por favor');
+            document.getElementById('email').style.borderColor = "red";
+            return false;
+          }
+
+          if (!e.match(onlyEmail)) {
+            document.getElementById('emailLabel').innerHTML = ('Ingresa una cuenta de email valida por favor');
+            document.getElementById('email').style.borderColor = "red";
+            return false;
+          }
+
+          if (s == "" || s == null) {
+            document.getElementById('subjectLabel').innerHTML = ('Please enter your subject');
+            document.getElementById('subject').style.borderColor = "red";
+            return false;
+          }
+
+          if (!s.match(onlyLetters)) {
+            document.getElementById('subjectLabel').innerHTML = ('Please enter only letters');
+            document.getElementById('subject').style.borderColor = "red";
+            return false;
+          }
+
+          if (m == "" || m == null) {
+            document.getElementById('messageLabel').innerHTML = ('Please enter your message');
+            document.getElementById('message').style.borderColor = "red";
+            return false;
+          }
+
+          else {
+            return true;
+          }
+
+        }
+
+        $(".carousel").carousel({
+          interval: 5000,
+          pause: "hover"
+        });
+
+        // Lightbox Init
+        $(document).on("click", '[data-toggle="lightbox"]', function (event) {
+          event.preventDefault();
+          $(this).ekkoLightbox();
+        });
+      </script>
+
 </body>
-<%- include ('partials/footer.html') %>
+
 
 </html>
