--- a/src/views/partials/footer.html
+++ b/src/views/partials/footer.html
@@ -1,8 +1,114 @@
-<footer class="bg-light text-center p-2">
-    <p class="h3">Parser Web 2021</p>
+<a href="https://api.whatsapp.com/send?phone=51954600050&text=Hola!%20Quisiera%20m%C3%A1s%20informaci%C3%B3n."
+    class="float"
+    target="_blank">
+    <i class="fab fa-whatsapp my-float"></i>
+</a>
+
+<footer id="footer"
+    class="footer-1">
+    <div class="main-footer widgets-dark typo-light">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-xs-12 col-sm-6 col-md-3">
+                    <div class="widget subscribe no-box pt-5">
+                        <a href="/"><img src="/img/logoFoga.png"
+                                class="logoFoga"
+                                alt="Website Logo" /></a>
+                    </div>
+                </div>
+
+                <div class="col-xs-12 col-sm-6 col-md-3">
+                    <div class="widget no-box">
+                        <h5 class="widget-title">Navegacion<span></span></h5>
+                        <ul class="thumbnail-widget">
+                            <li>
+                                <div class="thumb-content"><a href="/">Inicio</a></div>
+                            </li>
+                            <li>
+                                <div class="thumb-content"><a href="#.">Servicios</a></div>
+                            </li>
+                            <li>
+                                <div class="thumb-content"><a href="#.">Nosotros</a></div>
+                            </li>
+                            <li>
+                                <div class="thumb-content"><a href="#.">Galería</a></div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-xs-12 col-sm-6 col-md-3">
+                    <div class="widget no-box">
+                        <h5 class="widget-title">Get Started<span></span></h5>
+                        <p>Get access to your full Training and Marketing Suite.</p>
+                        <a class="btn"
+                            href="#."
+                            target="_blank">Register Now</a>
+                    </div>
+                </div>
+
+                <div class="col-xs-12 col-sm-6 col-md-3">
+
+                    <div class="widget no-box">
+                        <h5 class="widget-title">Contáctanos<span></span></h5>
+
+                        <p><a href="mailto:gerencia@inversionesfoga.com"
+                                title="glorythemes">gerencia@inversionesfoga.com</a></p>
+                        <ul class="social-footer2">
+                            <li class=""><a class="social-media"
+                                    target="_blank"
+                                    href="https://api.whatsapp.com/send?phone=51954600050&text=Hola!%20Quisiera%20m%C3%A1s%20informaci%C3%B3n."><i class="fab fa-whatsapp mx-2 fa-2x"
+                                        style="color:  #28ac01"></i></a></li>
+                            <li class=""><a class="social-media"
+                                    target="_blank"
+                                    href="https://www.facebook.com/Servicios-Generales-FOGA-102479198608177"><i class="fab fa-facebook mx-2 fa-2x"
+                                        style="color:  #3C5A99"></i></a></li>
+                            <li class=""><a class="social-media"
+                                    target="_blank"
+                                    href="https://www.youtube.com"><i class="fab fa-youtube mx-2 fa-2x"
+                                        style="color:  #cc181e"></i></a></li>
+                            <li class=""><a class="social-media"
+                                    target="_blank"
+                                    href="https://www.instagram.com"><i class="fab fa-instagram mx-2 fa-2x"
+                                        style="color:  #cc181e"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="footer-copyright">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 text-center">
+                    <p>Copyright Parserperu.com © 2021. All rights reserved.</p>
+                </div>
+                <div class="col-md-6 text-center">
+                    <a target="_blank"
+                        href="https://api.whatsapp.com/send?phone=51973303384&text=Hola!%20Quisiera%20m%C3%A1s%20informaci%C3%B3n.">
+                        <img class="parserlogo"
+                            src="img/parserlogo.png"
+                            alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
 
+
+
 <!-- Scripts -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+    integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
