--- a/src/views/catering.html
+++ b/src/views/catering.html
@@ -7,7 +7,7 @@
         content="IE=edge">
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
-    <title>Catering</title>
+    <title>FOGA | Catering</title>
     <%- include
         ('partials/head.html')
         %>
@@ -18,13 +18,19 @@
         ('partials/navigation.html')
         %>
 
-        <div class="jumbotron jumbo-picture">
-            <h1>Prestwick Codes</h1>
-            <p>And yes, you can change the background, colors, etc...</p>
-            <p>Look at the code for this Jumbotron.</p>
-            <p><a class="btn btn-primary btn-lg"
-                    href="http://prestwickcodes.org/"
-                    role="button">Learn more</a></p>
+        <div class="jumbotron jumbo-picture jumbo-catering text-center">
+            <h1 class="p-5 m-5 display-4">CATERING</h1>
+        </div>
+
+        <div class="jumbotron container">
+            <h1 class="display-4">Servicio de Catering</h1>
+            <p class="lead">Selecto equipo de profesionales con amplia experiencia en el servicio de alimentos, que actualmente vienen desempeñándose en los rubros de gestión gastronómica y de organización de eventos.</p>
+            <hr class="my-4">
+            <p></p>
+            <a class="btn btn-primary btn-lg"
+                target="_blank"
+                href="https://api.whatsapp.com/send?phone=51954600050&text=Hola!%20Quisiera%20m%C3%A1s%20informaci%C3%B3n."
+                role="button">Contacto</a>
         </div>
 
 
