--- a/src/views/distribucion.html
+++ b/src/views/distribucion.html
@@ -7,7 +7,7 @@
         content="IE=edge">
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
-    <title>Distribución de Productos</title>
+    <title>FOGA | Distribución de Productos</title>
     <%- include
         ('partials/head.html')
         %>
@@ -18,13 +18,19 @@
         ('partials/navigation.html')
         %>
 
-        <div class="jumbotron jumbo-picture">
-            <h1>Prestwick Codes</h1>
-            <p>And yes, you can change the background, colors, etc...</p>
-            <p>Look at the code for this Jumbotron.</p>
-            <p><a class="btn btn-primary btn-lg"
-                    href="http://prestwickcodes.org/"
-                    role="button">Learn more</a></p>
+        <div class="jumbotron jumbo-picture jumbo-distribucion text-center">
+            <h1 class="p-5 m-5 display-4">DISTRIBUCIÓN DE PRODUCTOS</h1>
+        </div>
+
+        <div class="jumbotron container">
+            <h1 class="display-4">Servicio de Distribución de Productos en General</h1>
+            <p class="lead">Experiencia dedicada a la Fabricación y Venta de Ropa Industrial y Uniformes. Contamos con profesionales especializados y en constante capacitación con el objetivo de brindarle a nuestros clientes modelos únicos y de excelente calidad. Cumplimos con todas las normativas y estándares de calidad.</p>
+            <hr class="my-4">
+            <p></p>
+            <a class="btn btn-primary btn-lg"
+                target="_blank"
+                href="https://api.whatsapp.com/send?phone=51954600050&text=Hola!%20Quisiera%20m%C3%A1s%20informaci%C3%B3n."
+                role="button">Contacto</a>
         </div>
 
 
