--- a/src/views/partials/navigation.html
+++ b/src/views/partials/navigation.html
@@ -38,7 +38,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle"
-                        href="#"
+                        href="/#cards_landscape_wrap-2"
                         id="navbarDropdown"
                         role="button"
                         data-toggle="dropdown"
@@ -62,11 +62,11 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link"
-                        href="#">Nosotros</a>
+                        href="/#nosotros">Nosotros</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link"
-                        href="#">Galeria</a>
+                        href="/#gallery">Galeria</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link"
