--- a/src/views/telecomunicaciones.html
+++ b/src/views/telecomunicaciones.html
@@ -7,7 +7,7 @@
         content="IE=edge">
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
-    <title>Telecomunicaciones</title>
+    <title>FOGA | Telecomunicaciones</title>
     <%- include
         ('partials/head.html')
         %>
@@ -18,16 +18,20 @@
         ('partials/navigation.html')
         %>
 
-        <div class="jumbotron jumbo-picture">
-            <h1>Prestwick Codes</h1>
-            <p>And yes, you can change the background, colors, etc...</p>
-            <p>Look at the code for this Jumbotron.</p>
-            <p><a class="btn btn-primary btn-lg"
-                    href="http://prestwickcodes.org/"
-                    role="button">Learn more</a></p>
+        <div class="jumbotron jumbo-picture jumbo-telecomunicaciones text-center">
+            <h1 class="p-5 m-5 display-4">TELECOMUNICACIONES</h1>
         </div>
 
-
+        <div class="jumbotron container">
+            <h1 class="display-4">Servicio de Telecomunicaciones</h1>
+            <p class="lead">Nuestro Equipo está integrado por expertos en las Tecnologías más actualizadas del mercado, capaces de entender sus necesidades y crear soluciones inteligentes, rentables y con Garantía de Satisfacción. Estamos dedicados al Diseño, Gestión de Proyectos y Soluciones Integrales en Telecomunicaciones , nuestro Equipo está integrado por Profesionales Multidisciplinarios con Certificaciones Internacionales de las marcas líderes del mercado de las telecomunicaciones y tecnología.</p>
+            <hr class="my-4">
+            <p></p>
+            <a class="btn btn-primary btn-lg"
+                target="_blank"
+                href="https://api.whatsapp.com/send?phone=51954600050&text=Hola!%20Quisiera%20m%C3%A1s%20informaci%C3%B3n."
+                role="button">Contacto</a>
+        </div>
 
         <%- include
             ('partials/footer.html')
