--- a/src/views/partials/head.html
+++ b/src/views/partials/head.html
@@ -19,3 +19,17 @@
 <!-- Custom CSS -->
 <link rel="stylesheet"
     href="/css/main.css">
+<!-- Favicon.css -->
+<link rel="apple-touch-icon"
+    sizes="180x180"
+    href="img/apple-touch-icon.png">
+<link rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="img/favicon-32x32.png">
+<link rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="img/favicon-16x16.png">
+<link rel="manifest"
+    href="/site.webmanifest">
